Day 7 Part1 - WIP

--- a/AoC2023Tests/AoC2023Tests.csproj
+++ b/AoC2023Tests/AoC2023Tests.csproj
@@ -36,6 +36,12 @@
     <None Update="Inputs\Day2Example.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Inputs\Day7Example.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Inputs\Day7.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
