--- a/AoC2023Tests/AoC2023Tests.csproj
+++ b/AoC2023Tests/AoC2023Tests.csproj
@@ -34,7 +34,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Inputs\Day2Example.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Inputs\Day7Example.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
